--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
               width="140"
               height="140"
             />
-            <h2>Heading</h2>
+            <h2>Header</h2>
             <p>
               Donec sed odio dui. Etiam porta sem malesuada magna mollis
               euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
@@ -193,7 +193,7 @@
               width="140"
               height="140"
             />
-            <h2>Heading</h2>
+            <h2>Header</h2>
             <p>
               Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
               eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
@@ -215,7 +215,7 @@
               width="140"
               height="140"
             />
-            <h2>Heading</h2>
+            <h2>Header</h2>
             <p>
               Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
               egestas eget quam. Vestibulum id ligula porta felis euismod
